# solar-gen

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  TODO.md  TODOS.md  agent-eval-log.md  dev.sh  railway.toml
agent/: .env.example  pyproject.toml  requirements.txt
agent/scripts/: e2e_v3_test.py
agent/src/: agent.py  agent_jobs.py  auth.py  batch.py  batch_progress.py  chat_agent.py  chunking.py  completeness.py  confidence.py  config.py  contact_discovery.py  context_compressor.py  db.py  embeddings.py  evidence.py  hubspot.py  knowledge_base.py  main.py  models.py  parsing.py  prompts.py  reflection.py  research.py  research_loop.py  salvage.py  search_dispatch.py  share_sanitizer.py  sse.py  tavily_search.py  triage.py
agent/src/agents/: __init__.py  chat.py  contact_discovery.py  research.py
agent/src/hooks/: __init__.py  _protocol_stub.py  batch_tracking.py  completeness_hook.py  contact_save.py  discovery.py  inject_context.py  rate_limit.py  tool_health.py
agent/src/runtime/: __init__.py  agent_runtime.py  compactor.py  escalation.py  hooks.py  types.py
agent/src/tools/: __init__.py  approve_discovery.py  batch_research_epc.py  brave_search.py  classify_contact.py  enrich_contact_email.py  enrich_contact_phone.py  fetch_page.py  find_contacts.py  firecrawl_scrape.py  lookup_hubspot_contacts.py  manage_todo.py  notify_progress.py  (+14 more)
agent/tests/: conftest.py  test_agent.py  test_agent_jobs.py  test_agent_runtime.py  test_agents_chat.py  test_agents_research.py  test_batch.py  test_batch_research_epc.py  test_batch_sharing.py  test_chat_agent.py  test_chat_reconnect.py  test_chunking.py  test_classify_contact.py  test_completeness.py  test_confidence.py  test_contact_discovery.py  test_contact_discovery_agent.py  test_context_compressor.py  test_db.py  test_db_chat_events.py  test_e2e_v2.py  test_embeddings.py  test_enrich_tools.py  test_escalation.py  test_evidence.py  test_fetch_page.py  test_find_contacts.py  test_firecrawl_extract.py  test_hook_batch_tracking.py  test_hook_discovery.py  test_hook_inject_context.py  test_hook_rate_limit.py  test_hook_tool_health.py  test_hooks_protocol.py  test_hubspot.py  test_knowledge_base.py  test_lookup_hubspot_contacts.py  test_main.py  test_manage_todo.py  test_models.py  (+25 more)
(+221 files in other folders)
