[project]
name = "epc-discovery-agent"
version = "0.1.0"
description = "Claude-powered EPC discovery agent for solar projects"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "trafilatura>=1.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.13.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.1.0",
    "pymupdf>=1.24.0",
    "openai>=1.55.0",
    "firecrawl-py>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "pytest-cov", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"src/main.py" = ["E402"]          # load_dotenv() must run before imports
"src/seed_epc_entities.py" = ["E402"]  # load_dotenv() must run before imports
"tests/test_agents_chat.py" = ["E402"]       # sys.modules stub before import
"tests/test_agents_research.py" = ["E402"]   # sys.modules stub before import
"tests/test_hook_batch_tracking.py" = ["E402"]  # sys.modules stub before import
"tests/test_hook_discovery.py" = ["E402"]    # sys.modules stub before import
"tests/test_run_research_tool.py" = ["E402"] # sys.modules stub before import
"src/tools/__init__.py" = ["E402"]           # run_research imported after registry setup

[tool.ruff.format]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
